index.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --Blue600: hsl(231, 69%, 60%);
  --Red-400: hsl(0, 94%, 66%);
  --Grey50: hsl(0, 0%, 97%);
  --Blue950: hsl(229, 31%, 21%);
}
body {
  font-family: "Rubik";
  width: 100%;
}
.container {
  width: 100%;
}
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 30px;
}
#nav-bar {
  display: flex;
  align-items: center;
  gap: 2rem;
  list-style: none;
}
.nav-button {
  background-color: var(--Red-400);
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 10px;
  text-transform: uppercase;
}
.about-page {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 30px;
}
.about-text h2 {
  font-size: 4rem;
  font-weight: 30px;
  margin-bottom: 1rem;
  line-height: 1.2;
}
.about-text,
.illustration-tab-text,
.illustration-tab,
.illustration-image,
.download-extension-text {
  width: 50%;
}
.illustration-image,
.illustration-tab {
  height: 500px;
  overflow: hidden;
}
.about-text p,
.page-link-text p,
.illustration-tab-text p,
.download-extension-text p {
  line-height: 1.5;
  margin-bottom: 1.5rem;
}
.about-text p {
  width: 60%;
  margin-bottom: 2rem;
}
.about-page button {
  gap: 10rem;
}
.button {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.fire-button {
  background-color: rgb(218, 216, 216);
  color: black;
}
.chrome-button {
  background-color: rgb(41, 41, 163);
  color: white;
}
.chrome-button,
.fire-button {
  border: none;
  border-radius: 3px;
  padding: 15px 10px;
}
.illustration-image,
.illustration-tab {
  overflow: hidden;
}
.illustration-image img,
.illustration-tab img {
  width: 100%;
  object-position: center;
  object-fit: contain;
}

.page-link {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.page-link-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.page-link-text h4,
.illustration-tab-text h3 {
  font-size: 2rem;
  margin-bottom: 2rem;
}
.page-link-text p {
  width: 50%;
  text-align: center;
  margin-bottom: 3rem;
  /* border: 1px solid; */
}
.page-nav-link-container {
  border-bottom: 1px solid;
  margin-bottom: 2rem;
}
.link {
  display: flex;
  align-items: center;
  gap: 1rem;
  list-style: none;
}
.link li {
  padding: 1rem 0;
}
a {
  text-decoration: none;
  color: black;
}
.link li.active {
  border-bottom: 3px solid var(--Red-400);
}
.content-page {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 7rem;
  padding: 4rem;
}
.illustration-tab-text {
  text-align: left;
}

.download-extension {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 4rem;
}
.download-extension-container {
  display: flex;
  align-items: flex-start;
  padding: 20px;
  gap: 1rem;
}
.download-extension-container img {
  width: 60%;
}
.download-extension-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.download-extension-text h3 {
  margin-bottom: 1rem;
  font-size: 2rem;
}
.download-extension-text p {
  width: 70%;
}
.firefox {
  margin-top: 2rem;
}
.opera {
  margin-top: 4rem;
}
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1rem;
  background-color: white;
  border-radius: 1rem;
  max-width: 200px;
  box-shadow: 1px 1px 8px rgb(207, 206, 206);
}
.chrome img,
.firefox img,
.opera img {
  margin-bottom: 10px;
}
.chrome h3,
.firefox h3,
.opera h3 {
  margin-bottom: 0.8rem;
}
.chrome p,
.firefox p,
.opera p {
  color: grey;
  font-size: 12px;
  margin-bottom: 1rem;
}
.line {
  display: flex;
  align-items: center;
  width: 100%;
}
.line img {
  display: block;
  width: 100%;
  object-position: center;
  object-fit: cover;
}
.add {
  background-color: rgb(52, 52, 248);
  color: white;
  border: none;
  border-radius: 3px;
  padding: 8px 15px;
}
.question-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.faq-head h3 {
  margin-bottom: 1rem;
}
.faq-head {
  margin-bottom: 1rem;
}
.question-1,
.question-2,
.question-3,
.question-4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  background-color: white;
  color: black;
  margin-bottom: 1rem;
  box-shadow: 1px 1px grey;
}
.faq-head {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.faq-head p {
  width: 55%;
  line-height: 1.5;
  color: black;
}
.FAQ {
  margin-bottom: 2rem;
}
.more {
  background-color: blue;
  color: white;
  border: none;
  border-radius: 3px;
  padding: 0.8rem;
  margin-bottom: 5rem;
}
.first-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--Blue600);
}
.first-footer-head {
  color: white;
  margin: 2rem;
  text-align: center;
}
.head {
  font-size: 12px;
  letter-spacing: 3px;
  margin-bottom: 2rem;
}
.up-to-date-text {
  font-size: 2rem;
}
.footer-button {
  display: flex;
  gap: 2rem;
  align-items: center;
  margin-bottom: 2rem;
}
.input {
  padding: 0.5rem;
}
.contact-button {
  background-color: red;
  color: white;
  padding: 0.8rem;
  border: none;
  border-radius: 2px;
}
footer {
  background-color: var(--Blue950);
  color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 4rem;
}
.footer-logo img {
  filter: contrast(0) brightness(1);
}
.footer-head {
  display: flex;
  align-items: center;
  gap: 5rem;
}
.footer-link {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 1rem;
}
footer a {
  color: white;
}
.footer-image {
  display: flex;
  align-items: center;
  gap: 1rem;
}
.mobile-toggle {
  display: none;
}
/* mobile style */
@media screen and (max-width: 768px) {
  header nav {
    display: none;
  }
  .mobile-toggle {
    display: block;
  }
  .about-page {
    flex-direction: column-reverse;
    padding: 3rem 0;
    /* margin-bottom: 3rem; */
    background-color: lightgrey;
  }
  .illustration-image,
  .about-text {
    width: 100%;
  }

  .about-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
}
@media screen and (max-width: 425px) {
  .illustration-image {
    height: 300px;
  }
}

